; ModuleID = '/home/carl/AnghaBench/disque/src/extr_dict.c_dictEmpty.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_dict.c_dictEmpty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dictEmpty(%struct.TYPE_4__* %0, void (i8*)* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca void (i8*)*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store void (i8*)* %1, void (i8*)** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 2
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load void (i8*)*, void (i8*)** %4, align 8
  %11 = call i32 @_dictClear(%struct.TYPE_4__* %5, i32* %9, void (i8*)* %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 2
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  %17 = load void (i8*)*, void (i8*)** %4, align 8
  %18 = call i32 @_dictClear(%struct.TYPE_4__* %12, i32* %16, void (i8*)* %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i32 -1, i32* %20, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  ret void
}

declare dso_local i32 @_dictClear(%struct.TYPE_4__*, i32*, void (i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
